add until chika section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     
                 </p>
                 <h4 class="subtitle marker-pen">
-                    でも、ここにも実は落とし穴がまだ残っています。
+                    でも、ここにも実は落とし穴が<span class="inline-block">残っています。</span>
                 </h4>
 
             </div>
@@ -296,9 +296,125 @@
             </div>
         </section>
 
+
+        <section class="section bg-1">
+            <div class="container">
+                <div class="has-text-centered">
+                    <p class="subtitle is-5 has-text-white is-spaced">
+                        そこで<span class="inline-block">ストーリーシェア</span>では
+                    <br>
+                    <br>
+                        こうした問題を<span class="inline-block">解決するために</span>
+                    </p>
+                    <h2 class="title is-4 has-text-warning is-spaced border-around-text">
+                        ワーキングホリデー<span class="inline-block title is-3 has-text-warning">完全サポートコース</span>
+                    </h2>
+                    <p class="subtitle is-5 has-text-white is-spaced">
+                        を開始しました。
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="section">
+            <div class="container">
+                <div class="has-text-centered">
+                    <p class="subtitle is-5 is-spaced">
+                        ワーキングホリデーに<span class="inline-block">日本で1番詳しい</span>
+                    </p>
+                    <h2 class="title is-4 marker-pen">
+                        <span class="inline-block title is-5">留学コンシェルジュ</span>
+                        &nbsp;<span class="inline-block">チカさん監修</span>
+                    </h2>
+                </div>
+                <div class="columns content">
+                    <div class="column columns is-centered">
+                        <div class="column is-4">
+                            <figure>
+                                <img src="img/chika.jpg">
+                            </figure>
+                        </div>
+                        <div class="column is-5">
+                            <p>
+                                アサヒビール本社にてマーケティング等に従事した後、2006年に渡豪。
+                                世界中から集まる人達からたくさんの新しい世界を学び吸収し、
+                                現在はアイエス留学ネットワークでコンシェルジュとして多数の生徒をサポート。
+                                <br>
+                                日本でもオーストラリアでも働いたからこそできるアドバイスが有ります。
+                            </p>
+                            <h3 class="has-text-right has-text-primary">
+                                <span class="inline-block is-size-6">留学コンシェルジュ</span>&nbsp;&nbsp;
+                                <span class="inline-block">チカ&nbsp;サカモト
+                                    <span class="inline-block title is-6 has-text-primary">さん</span>
+                                </span>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="columns">
+                    <div class="column">
+                        <article class="message is-warning">
+                            <div class="message-header is-hcentered">
+                                <p>信頼できるキャリア</p>
+                            </div>
+                            <div class="message-body">
+                                チカさんは元一部上場企業のマーケティング部署のエース。オーストラリアで日本大手の進出を任せられていたグローバル社員です。
+                                <br>
+                                ワーホリ中のアルバイトや若いスタッフと比べると、経験も情熱も格段に違います。
+                                <br>
+                                <br>
+                                留学、ワーホリでの悩みは本当に千差万別。相談する人でその人の人生が変わります。
+                            </div>
+                        </article>
+                    </div>
+                    <div class="column">
+                        <article class="message is-warning">
+                            <div class="message-header is-hcentered">
+                                <p>エージェント歴10年以上</p>
+                            </div>
+                            <div class="message-body">
+                                チカさんはなんと10年以上もエージェントをしています。
+                                <br>
+                                これは情熱と愛情が相当なければできないことです。
+                                エージェントを10年続ける人は全体の１％もいません。
+                                <br>
+                                <br>
+                                10年も続けているからこそ、変化が激しく、種類の多い
+                                膨大な情報を把握していて、生徒が問題に遭遇した時、何かをしたい時に適切な情報を提供できるのです。
+                            </div>
+                        </article>
+                    </div>
+                    <div class="column">
+                        <article class="message is-warning">
+                            <div class="message-header is-hcentered">
+                                <p>本当に24時間対応</p>
+                            </div>
+                            <div class="message-body">
+                                24時間携帯を枕元に置いて寝るのがチカさんです。何かあったらすぐに電話に出て的確なアドバイスをします。
+                                <strong>しかも完全無料です</strong>。
+                                <br>
+                                <br>
+                                サポートを売りにしている大手エージェントで24時間対応と宣伝していても、実は留守番電話ということもあります。
+                                <br>
+                                <br>
+                                困ったときに本当に頼りになるので、安心して海外生活を楽しむことができます。
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+            </div>
+        </section>
+
+
+
         <section class="hero">
             <div class="container text-align-center">
-                    CopyRight&copy;2017 StoryShare AllRightReserved.
+                CopyRight&copy;2017 StoryShare AllRightReserved.
             </div>
         </section>
 
