--- a/index.html
+++ b/index.html
@@ -428,14 +428,26 @@
                             <span class="inline-block">インタビューになりました。</span><br>
                             チカさんの情報は凄すぎる！
                         </p>
-                        <div class="buttons is-centered padding-top-2 padding-bottom-3">
-                            <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">
-                                <strong>今すぐ無料お問い合わせ</strong>
-                            </a>
+                    </div>
+                </div>
+
+                <div class="columns is-8 is-centered">
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                            </div>
                         </div>
                     </div>
-
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-success" href="https://line.me/R/ti/p/%40iqc9618f">LINEから無料相談する</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </section>
 
@@ -620,6 +632,24 @@
                         </p>
                     </div>
                 </div>
+
+                <div class="columns is-8 is-centered">
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-success" href="https://line.me/R/ti/p/%40iqc9618f">LINEから無料相談する</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -905,6 +935,24 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="columns is-8 is-centered">
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-success" href="https://line.me/R/ti/p/%40iqc9618f">LINEから無料相談する</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -1109,9 +1157,20 @@
                     </div>
                 </div>
 
-                <div class="has-text-centered">
-                    <div class="field margin-top-2 is-hcentered">
-                        <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                <div class="columns is-8 is-centered">
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-3">
+                        <div class="has-text-centered">
+                            <div class="field margin-top-2 is-hcentered">
+                                <a class="button is-success" href="https://line.me/R/ti/p/%40iqc9618f">LINEから無料相談する</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -1233,15 +1292,16 @@
                         まずは無料の相談がおすすめです
                     </h2>
                     <div class="columns is-centered">
-                        <div class="column is-7">
-                            <p>
-                                どんな些細な疑問でもお気兼ねなくご相談ください。
-                                <div class="has-text-centered">
-                                        <div class="field margin-top-2 is-hcentered">
-                                            <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
-                                        </div>
-                                    </div>
-                                <br><br>
+                        <div class="column is-6">
+                            <h3 class="subtitle margin-top-2">
+                                    無料相談はコチラから
+                            </h3>
+                            <div class="has-text-centered">
+                                <div class="field margin-top-2 is-hcentered">
+                                    <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                </div>
+                            </div>
+                            <p class="margin-top-2">
                                 留学には様々な不安や心配がつきものですが、
                                 私たちのスタッフが全ての疑問にお答えいたします。
                                 <br><br>
@@ -1249,7 +1309,8 @@
                                 あなたの目標、予算、期間に応じて最適な留学プランを提案させていただきます。
                                 相談は完全に無料で、こちらから営業なども致しません。
                             </p>
-
+                        </div>
+                        <div class="column is-6">
                             <h3 class="subtitle margin-top-2">
                                 LINEメッセージも受付中
                             </h3>
