--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">
-                            <strong>今すぐ無料お問い合わせ</strong>
+                            <strong>資料請求/お問い合わせ</strong>
                             </a>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                                 <span class="inline-block">学習サポート。</span>
                             </h2>
                             <div class="field">
-                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">資料請求/お問い合わせ</a>
                             </div>
                         </div>
                     </div>
@@ -435,7 +435,7 @@
                     <div class="column is-3">
                         <div class="has-text-centered">
                             <div class="field margin-top-2 is-hcentered">
-                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">資料請求/お問い合わせ</a>
                             </div>
                         </div>
                     </div>
@@ -637,7 +637,7 @@
                     <div class="column is-3">
                         <div class="has-text-centered">
                             <div class="field margin-top-2 is-hcentered">
-                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">資料請求/お問い合わせ</a>
                             </div>
                         </div>
                     </div>
@@ -940,7 +940,7 @@
                     <div class="column is-3">
                         <div class="has-text-centered">
                             <div class="field margin-top-2 is-hcentered">
-                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">資料請求</a>
                             </div>
                         </div>
                     </div>
@@ -1161,7 +1161,7 @@
                     <div class="column is-3">
                         <div class="has-text-centered">
                             <div class="field margin-top-2 is-hcentered">
-                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">資料請求/お問い合わせ</a>
                             </div>
                         </div>
                     </div>
@@ -1298,7 +1298,7 @@
                             </h3>
                             <div class="has-text-centered">
                                 <div class="field margin-top-2 is-hcentered">
-                                    <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">今すぐお問い合わせ</a>
+                                    <a class="button is-primary" href="https://www.storyshare.jp/estimation_inquiry/">資料請求/お問い合わせ</a>
                                 </div>
                             </div>
                             <p class="margin-top-2">
