--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 
                                 <div class="media">
                                     <div class="media-left">
-                                        <figure class="image is-48x48">
-                                            <img src="img/happy.png" alt="ハッピー">
+                                        <figure class="image is-64x64">
+                                            <img class="border-radius" src="img/face-1.jpg" alt="ハッピー">
                                         </figure>
                                     </div>
-                                    <div class="media-content margin-top-10px">
+                                    <div class="media-content margin-top">
                                         <p class="title is-4">ワーホリ前</p>
                                     </div>
                                 </div>
@@ -124,11 +124,11 @@
 
                                 <div class="media">
                                     <div class="media-left">
-                                        <figure class="image is-48x48">
-                                            <img src="img/cry.png" alt="泣いている">
+                                        <figure class="image is-64x64">
+                                            <img class="border-radius" src="img/face-2.jpg" alt="泣いている">
                                         </figure>
                                     </div>
-                                    <div class="media-content margin-top-10px">
+                                    <div class="media-content margin-top">
                                         <p class="title is-4">でも現実は...</p>
                                     </div>
                                 </div>
