--- a/index.html
+++ b/index.html
@@ -88,21 +88,13 @@
 
                 <div class="columns margin-top-2">
                     <div class="column is-5">
-
                         <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="img/before.png" alt="Placeholder image">
+                                </figure>
+                            </div>
                             <div class="card-content">
-
-                                <div class="media">
-                                    <div class="media-left">
-                                        <figure class="image is-64x64">
-                                            <img class="border-radius" src="img/face-1.jpg" alt="ハッピー">
-                                        </figure>
-                                    </div>
-                                    <div class="media-content margin-top">
-                                        <p class="title is-4">ワーホリ前</p>
-                                    </div>
-                                </div>
-                            
                                 <div class="content">
                                     <ul>
                                         <li>ワーホリで英語が話せるようになる！</li>
@@ -120,19 +112,12 @@
 
                     <div class="column is-5">
                         <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="img/after.png" alt="Placeholder image">
+                                </figure>
+                            </div>
                             <div class="card-content">
-
-                                <div class="media">
-                                    <div class="media-left">
-                                        <figure class="image is-64x64">
-                                            <img class="border-radius" src="img/face-2.jpg" alt="泣いている">
-                                        </figure>
-                                    </div>
-                                    <div class="media-content margin-top">
-                                        <p class="title is-4">でも現実は...</p>
-                                    </div>
-                                </div>
-                            
                                 <div class="content">
                                     <ul>
                                         <li>英語が伸びず日本で勉強しておけばと後悔</li>
@@ -140,7 +125,6 @@
                                         <li>友達は日本人ばかりで余計英語は伸びない</li>
                                     </ul>
                                 </div>
-
                             </div>
                         </div>
                     </div>
